--- a/script.ipynb
+++ b/script.ipynb
@@ -459,6 +459,110 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24774801",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\10\\attn_patches_nObjects=15_triplet=10_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\15\\attn_patches_nObjects=15_triplet=15_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\20\\attn_patches_nObjects=15_triplet=20_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\25\\attn_patches_nObjects=15_triplet=25_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\30\\attn_patches_nObjects=15_triplet=30_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\35\\attn_patches_nObjects=15_triplet=35_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\40\\attn_patches_nObjects=15_triplet=40_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\45\\attn_patches_nObjects=15_triplet=45_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\5\\attn_patches_nObjects=15_triplet=5_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_number\\15\\50\\attn_patches_nObjects=15_triplet=50_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\10\\attn_patches_nObjects=15_triplet=10_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\15\\attn_patches_nObjects=15_triplet=15_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\20\\attn_patches_nObjects=15_triplet=20_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\25\\attn_patches_nObjects=15_triplet=25_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\35\\attn_patches_nObjects=15_triplet=35_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\40\\attn_patches_nObjects=15_triplet=40_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\45\\attn_patches_nObjects=15_triplet=45_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\5\\attn_patches_nObjects=15_triplet=5_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\just_scan\\15\\50\\attn_patches_nObjects=15_triplet=50_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\10\\attn_patches_nObjects=15_triplet=10_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\15\\attn_patches_nObjects=15_triplet=15_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\20\\attn_patches_nObjects=15_triplet=20_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\25\\attn_patches_nObjects=15_triplet=25_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\30\\attn_patches_nObjects=15_triplet=30_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\35\\attn_patches_nObjects=15_triplet=35_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\40\\attn_patches_nObjects=15_triplet=40_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\45\\attn_patches_nObjects=15_triplet=45_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\5\\attn_patches_nObjects=15_triplet=5_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\row\\15\\50\\attn_patches_nObjects=15_triplet=50_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\simple\\15\\10\\attn_patches_nObjects=15_triplet=10_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\simple\\15\\15\\attn_patches_nObjects=15_triplet=15_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\simple\\15\\20\\attn_patches_nObjects=15_triplet=20_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\simple\\15\\25\\attn_patches_nObjects=15_triplet=25_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\simple\\15\\35\\attn_patches_nObjects=15_triplet=35_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\simple\\15\\45\\attn_patches_nObjects=15_triplet=45_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\simple\\15\\5\\attn_patches_nObjects=15_triplet=5_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "[WARN] C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\\simple\\15\\50\\attn_patches_nObjects=15_triplet=50_0.json -> open() got an unexpected keyword argument 'mtime'\n",
+      "\n",
+      "Done. made=0, skipped(up-to-date)=0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # save as: make_json_gz.py\n",
+    "# import gzip, os, sys, time\n",
+    "\n",
+    "# ROOT = r\"C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\"\n",
+    "# made = skipped = 0\n",
+    "\n",
+    "# make_json_gz.py\n",
+    "import os, sys, gzip, shutil, inspect\n",
+    "\n",
+    "ROOT = r\"C:\\Users\\user\\Desktop\\FatemehUni\\master\\project\\draw\\visualize_scene_description\"\n",
+    "\n",
+    "def supports_mtime():\n",
+    "    try:\n",
+    "        return \"mtime\" in inspect.signature(gzip.GzipFile).parameters\n",
+    "    except Exception:\n",
+    "        return False\n",
+    "\n",
+    "SUPPORTS_MTIME = supports_mtime()\n",
+    "made = skipped = 0\n",
+    "\n",
+    "for dirpath, _, files in os.walk(ROOT):\n",
+    "    for fn in files:\n",
+    "        if not fn.endswith(\".json\"):\n",
+    "            continue\n",
+    "        inp = os.path.join(dirpath, fn)\n",
+    "        out = inp + \".gz\"\n",
+    "        try:\n",
+    "            # skip if .gz is newer or equal\n",
+    "            if os.path.exists(out) and os.path.getmtime(out) >= os.path.getmtime(inp):\n",
+    "                skipped += 1\n",
+    "                continue\n",
+    "\n",
+    "            with open(inp, \"rb\") as f_in, open(out, \"wb\") as raw_out:\n",
+    "                if SUPPORTS_MTIME:\n",
+    "                    mtime = int(os.path.getmtime(inp))\n",
+    "                    with gzip.GzipFile(fileobj=raw_out, mode=\"wb\", compresslevel=9, mtime=mtime) as gz:\n",
+    "                        shutil.copyfileobj(f_in, gz)\n",
+    "                else:\n",
+    "                    with gzip.GzipFile(fileobj=raw_out, mode=\"wb\", compresslevel=9) as gz:\n",
+    "                        shutil.copyfileobj(f_in, gz)\n",
+    "\n",
+    "            # align timestamps for determinism\n",
+    "            os.utime(out, (os.path.getmtime(inp), os.path.getmtime(inp)))\n",
+    "            made += 1\n",
+    "            print(\"[OK] wrote\", out)\n",
+    "        except Exception as e:\n",
+    "            print(\"[WARN]\", inp, \"->\", e)\n",
+    "\n",
+    "print(f\"\\nDone. made={made}, skipped(up-to-date)={skipped}\")\n"
+   ]
   }
  ],
  "metadata": {
